# cross-model-verification-kernel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  HF_MODEL_CARD.md  LAUNCH_CHECKLIST.md  NEW_FEATURES.md  NEXT_STEPS.md  PAPER.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  SAFETY.md  SECURITY.md  example.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  publish.yml
config/: settings.yaml
docs/: DIAGRAMS.md  architecture.md  features.md  getting_started.md  safety.md  traceability.md
examples/: basic_example.py  demo_complete_pipeline.py  demo_innovation_layer.py  example.py  model_diversity_comparison.py  real_api_integration.py  test_full_pipeline.py
experiments/: FEATURE_2_LATERAL_THINKING.md  ablation_runner.py  baseline_runner.py  blind_spot_benchmark.py  demo_with_traces.py  efficiency_curve.py  experiment_runner.py  paper_data_generator.py  reproduce_results.py  reproducible_runner.py  sabotage_stress_test.py  test_lateral_thinking.py  test_prosecutor.py  visualize_results.py
experiments/datasets/: README.md  humaneval_50.json  humaneval_full.json  sample.json
logs/traces/: demo_HumanEval_0_20260121-204900.json
notebooks/: analysis.ipynb
paper/: PAPER.md  arxiv_checklist.md  cmvk_neurips.aux  generate_figures.py  structure.tex
src/: __init__.py  cli.py  generator.py  kernel.py  simple_kernel.py  verifier.py
src/agents/: __init__.py  base_agent.py  generator_openai.py  verifier_gemini.py
src/cmvk/: __init__.py
src/core/: graph_memory.py  kernel.py  trace_logger.py  types.py
src/cross_model_verification_kernel/: __init__.py  __main__.py  cli.py  generator.py  kernel.py  models.py  simple_kernel.py  verifier.py
src/cross_model_verification_kernel/agents/: __init__.py  base_agent.py  generator_openai.py  verifier_anthropic.py  verifier_gemini.py
src/cross_model_verification_kernel/core/: __init__.py  graph_memory.py  kernel.py  trace_logger.py  types.py
src/cross_model_verification_kernel/datasets/: __init__.py  humaneval_loader.py
src/cross_model_verification_kernel/tools/: __init__.py  huggingface_upload.py  sandbox.py  statistics.py  visualizer.py  web_search.py
src/datasets/: humaneval_loader.py
src/tools/: __init__.py  sandbox.py
tests/: conftest.py  test_agents.py  test_anthropic_verifier.py  test_cli.py  test_core.py  test_integration.py  test_kernel.py  test_lateral_thinking_integration.py  test_reproducibility.py  test_trace_logger.py  test_verification.py  test_visualizer.py
tests/integration/: test_anthropic_verifier.py  test_integration.py  test_lateral_thinking_integration.py  test_lateral_thinking_witness.py  test_prosecutor_mode.py
tests/unit/: test_agents.py  test_cli.py  test_core.py  test_humaneval_loader.py  test_kernel.py  test_reproducibility.py  test_trace_logger.py  test_visualizer.py
