[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cross-model-verification-kernel"
version = "1.0.0"
description = "Adversarial multi-model verification framework for AI code generation - addressing the 'grading your own homework' problem"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Imran Siddique", email = "imran.siddique@example.com" }
]
keywords = [
    "llm",
    "code-generation",
    "verification",
    "multi-agent",
    "adversarial",
    "ai-safety",
    "code-review",
    "testing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = [
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "openai>=1.59.0",
    "google-generativeai>=0.8.0",
    "anthropic>=0.43.0",
    "dataclasses-json>=0.6.7",
    "typing-extensions>=4.12.0",
    "colorlog>=6.9.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.10.0",
    "flake8>=7.1.0",
    "mypy>=1.14.0",
    "isort>=5.13.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
]
notebooks = [
    "jupyter>=1.1.0",
    "notebook>=7.3.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    "pandas>=2.2.0",
    "numpy>=2.2.0",
]
sandbox = [
    "docker>=7.1.0",
]
search = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
]
huggingface = [
    "huggingface-hub>=0.27.0",
]
all = [
    "cross-model-verification-kernel[dev,notebooks,sandbox,search,huggingface]",
]

[project.scripts]
cmvk = "cross_model_verification_kernel.cli:app"

[project.urls]
Homepage = "https://github.com/imran-siddique/cross-model-verification-kernel"
Documentation = "https://github.com/imran-siddique/cross-model-verification-kernel#readme"
Repository = "https://github.com/imran-siddique/cross-model-verification-kernel.git"
Issues = "https://github.com/imran-siddique/cross-model-verification-kernel/issues"
Changelog = "https://github.com/imran-siddique/cross-model-verification-kernel/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/src/cross_model_verification_kernel",
    "/config",
    "/experiments/datasets",
]
exclude = [
    "/.github",
    "/notebooks",
    "/logs",
    "*.pyc",
    "__pycache__",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cross_model_verification_kernel"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=src/cross_model_verification_kernel",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
]
testpaths = ["tests/unit", "tests/integration"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring API keys",
    "sandbox: marks tests requiring Docker sandbox",
]

[tool.coverage.run]
source = ["src/cross_model_verification_kernel"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["cross_model_verification_kernel"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise-without-from-inside-except
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "experiments/",
    "notebooks/",
]
